tests/cases/error/error_undefined_include_var.out
error: Script Error
 --> tests/cases/error/error_undefined_include_var.rapt:2:19
  |
1 | # line 1
2 | INCLUDE dummy foo=bar
  |                   ^^^ Undefined variable: bar
3 | # line 3
4 |
  |
